<resources>
    <string name="app_name">LiftsManager</string>
    <string name="app_name_hi">लिफ्ट प्रबंधक</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="firasans_light">FiraSans_Light.ttf</string>
    <string name="roboto_light">Roboto_Light.ttf</string>
    <string name="distance">2 km away</string>
    <string name="address">Address</string>
    <string name="customer_name">Customer Name</string>
    <string name="preferred_time">8AM</string>
    <string name="splash_banner">Govt. of NCT of Delhi</string>
    <string name="splash_main">L</string>
    <string name="fragment_one_upcoming">Upcoming</string>
    <string name="fragment_two_all">All</string>
    <string name="fragment_three_settings">Settings</string>
    <string name="liftsmanager">LiftsManager</string>
    <string name="login_page">Login Page</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="select_language">Select Language</string>
    <string name="hindi">हिंदी</string>
    <string name="english">English</string>
    <string name="permission_alert">Please enable app permissions from settings</string>
    <string name="alert_call_title">Make a Call</string>
    <string name="alert_call_msg1">Are you sure you want to call</string>
    <string name="alert_call_msg2">\?</string>
    <string name="alert_call_yes">Yes</string>
    <string name="alert_call_no">No</string>
    <string name="title_listing">Listing Page</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="permission_rationale_location">Why we need your location...</string>
    <string name="location_permission_denied">Location permission denied</string>

</resources>
